[package]
name = "esp8266"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

embedded-hal = "0.2.4"
no-std-net = "0.4.0"
nb = "0.1.2"
heapless = "0.5.5"
log = "0.4.11"
moveslice = "2.0.1"

drogue-network = "0.1.0"

[dependencies.nom]
version= "5.1.2"
default-features = false



