[package]
name = "drogue-esp8266"
version = "0.3.1"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Networking stack for ESP8266 Wifi offload board"

[dependencies]
embedded-hal = "0.2.4"
nb = "0.1.2"
heapless = "0.5.5"
log = "0.4.11"
moveslice = "2.0.1"
drogue-network = { version = "0.2.0", path = "../drogue-network" }

[dependencies.nom]
version= "5.1.2"
default-features = false

[features]
1k = []
2k = []
