[package]
name = "drogue-esp8266"
version = "0.3.1"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>", "Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Networking stack for ESP8266 Wifi offload board"
readme = "README.md"
repository = "https://github.com/drogue-iot/drogue-esp8266"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std", "network-programming"]
keywords = ["driver", "esp8266", "network", "wifi", "no_std"]

[dependencies]
embedded-hal = "0.2.4"
nb = "0.1.2"
heapless = "0.5.5"
log = "0.4.11"
moveslice = "2.0.1"
drogue-network = "0.2.0"

[dependencies.nom]
version = "5.1.2"
default-features = false

[features]
1k = []
2k = []

[patch.crates-io]
#drogue-network = { path = "../drogue-network" }
#drogue-network = { git = "https://github.com/drogue-iot/drogue-network.git" }
